@@ -28,6 +28,7 @@
 #include "RocksDBEngine/RocksDBKeyBounds.h"
 
 #include <rocksdb/options.h>
+#include <rocksdb/utilities/transaction_db.h>
 
 namespace rocksdb {
 class Iterator;
@@ -48,9 +49,21 @@ class RocksDBGenericIterator {
   RocksDBGenericIterator(rocksdb::TransactionDB* db,
                          rocksdb::ReadOptions& options,
                          RocksDBKeyBounds const& bounds);
-  RocksDBGenericIterator(RocksDBGenericIterator&&) = default;
+  RocksDBGenericIterator(RocksDBGenericIterator const&) = delete;
+  RocksDBGenericIterator(RocksDBGenericIterator&& other)
+      : _bounds(std::move(other._bounds)),
+        _db(std::move(other._db)),
+        _options(std::move(other._options)),
+        _iterator(std::move(other._iterator)),
+        _cmp(other._cmp) {
+    other._options.snapshot = nullptr;
+  }
 
-  ~RocksDBGenericIterator() = default;
+  ~RocksDBGenericIterator() {
+    if (_options.snapshot != nullptr) {
+      _db->ReleaseSnapshot(_options.snapshot);
+    }
+  }
 
   //* The following functions returns true if the iterator is valid within
   // bounds on return.
@@ -66,8 +79,9 @@ class RocksDBGenericIterator {
  private:
   bool outOfRange() const;
 
-  RocksDBKeyBounds const _bounds;
-  rocksdb::ReadOptions const _options;
+  RocksDBKeyBounds _bounds;
+  rocksdb::TransactionDB* _db;
+  rocksdb::ReadOptions _options;
   std::unique_ptr<rocksdb::Iterator> _iterator;
   rocksdb::Comparator const* _cmp;
 };
