@@ -1,6 +1,10 @@
 v3.10.2 (XXXX-XX-XX)
 --------------------
 
+* Use intermediate commits in old shard synchronization protocol. This avoids
+  overly large RocksDB transactions when syncing large shards, which is a
+  remedy for OOM kills during restarts.
+
 * Added a feature to the ResignLeadership job. By default, it will now
   undo the leader changes automatically after the server is restarted,
   unless the option `undoMoves` is set to `false`. This will help to
